--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="HUSTLER BRACELET ACTIVITY FORM" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <title>HUSTLER BRACELET ACTIVITY FORM</title>
   </head>
   <body>
